<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_contact_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_contact_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_name"
        android:inputType="textCapSentences"
        android:textColorHint="@color/hint_enter_contact"
        android:textSize="@dimen/input_new_contact" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_below="@id/name"
        android:gravity="top"
        android:hint="@string/hint_enter_phone"
        android:inputType="phone"
        android:textColorHint="@color/hint_enter_contact"
        android:textSize="@dimen/input_new_contact" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_below="@id/phone"
        android:gravity="top"
        android:hint="@string/hint_enter_description"
        android:inputType="text"
        android:textColorHint="@color/hint_enter_contact"
        android:textSize="@dimen/input_new_contact" />

    <Spinner
        android:id="@+id/category"
        android:layout_below="@id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/contact_categories"
        android:prompt="@string/spinner_prompt"
        android:background="@android:color/transparent"/>
</LinearLayout>